--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_TYJL/JYPX_TYJL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_TYJL/JYPX_TYJL.cshtml
@@ -106,15 +106,16 @@
                 </div>
                 <div class="div_row_right">
                     <div id="div_sf_dxs" class="div_radio">
-                        <img class="img_radio" id="img_ysfw_dxs" /><label class="label_radio">大学生</label>
+                        <img class="img_radio" id="img_ysfw_dxs"/><label class="label_radio">大学生</label>
                     </div>
                     <div id="div_sf_zxjs" class="div_radio">
-                        <img class="img_radio" id="img_sf_zxjs" /><label class="label_radio">在校教师</label>
+                        <img class="img_radio" id="img_sf_zxjs"/><label class="label_radio">在校教师</label>
                     </div>
                     <div id="div_sf_zzjs" class="div_radio">
-                        <img class="img_radio" id="img_sf_zzjs" /><label class="label_radio">专职教练</label>
+                        <img class="img_radio" id="img_sf_zzjs"/><label class="label_radio">专职教练</label>
                     </div>
                 </div>
+                <div id="divSFTip"></div>
             </div>
             <div id="divTYJLJXKM" class="div_row" style="z-index: 999">
                 <div class="div_row_left">
@@ -124,7 +125,7 @@
                 <div class="div_row_right">
                     <div id="divJXKMText" class="div_select_out SRK" style="position: relative;">
                         <div id="divJXKMSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="LBID" />
+                            <input type="hidden" id="LBID"/>
                             <span id="spanJXKM" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择教学科目</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -132,6 +133,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divTYJLJXKMTip"></div>
             </div>
             <div id="divJBSP" class="div_row" style="margin-top: 22px;">
                 <div class="div_row_left">
@@ -150,12 +152,13 @@
                 </div>
                 <div class="div_row_right">
                     <div id="div_jjjy_y" class="div_radio">
-                        <img class="img_radio" id="img_jjjy_y" /><label class="label_radio">有</label>
+                        <img class="img_radio" id="img_jjjy_y"/><label class="label_radio">有</label>
                     </div>
                     <div id="div_jjjy_w" class="div_radio">
-                        <img class="img_radio" id="img_jjjy_w" /><label class="label_radio">无</label>
+                        <img class="img_radio" id="img_jjjy_w"/><label class="label_radio">无</label>
                     </div>
                 </div>
+                <div id="divJJJYTip"></div>
             </div>
             <div id="divQWSX" class="div_row" style="margin-top: 22px;">
                 <div class="div_row_left">
@@ -239,16 +242,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -256,8 +259,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
