--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_LX/JYPX_LX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_LX/JYPX_LX.cshtml
@@ -89,21 +89,21 @@
                     <div id="divBTTip"></div>
                 </div>
             </div>
-            <div id="divDBQZQZGJ" class="div_row" style="z-index: 998">
+            <div id="divLXGJ" class="div_row" style="z-index: 998">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">国家</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divGJText" class="div_select_out SRK" style="position: relative;">
+                    <div id="divGJText" class="div_select_out SRK" style="position: relative; z-index: 997;">
                         <div id="divGJSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanGJ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择国家</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divGJ" class="div_bqss" style="display: none;">
                             <div class="div_bqss_head">
-                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
-                                <input class="btn btn-info" type="button" value="快速搜索" />
+                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text"/>
+                                <input class="btn btn-info" type="button" value="快速搜索"/>
                             </div>
                             <div class="div_bqss_body">
                                 <div class="div_bqss_body_mc" id="div_bqss_body_mc">
@@ -114,6 +114,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divLXGJTip"></div>
             </div>
             <div id="divSQXL" class="div_row" style="z-index: 997;">
                 <div class="div_row_left">
@@ -122,6 +123,7 @@
                 </div>
                 <div id="divSQXLText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divSQXLTip"></div>
             </div>
             <div id="divFWQY" class="div_row" style="z-index: 996">
                 <div class="div_row_left">
@@ -187,16 +189,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -204,8 +206,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
