--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYEJY/JYPX_YYEJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_YYEJY/JYPX_YYEJY.cshtml
@@ -88,7 +88,7 @@
                     <div id="divBTTip"></div>
                 </div>
             </div>
-            <div id="divLPLB" class="div_row" style="z-index: 999">
+            <div id="divOUTLB" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -96,7 +96,7 @@
                 <div class="div_row_right">
                     <div id="divLBText" class="div_select_out SRK" style="position: relative;">
                         <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="LBID" />
+                            <input type="hidden" id="LBID"/>
                             <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -104,14 +104,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div id="divXL" class="div_row" style="z-index: 998; display: none;">
-                <div class="div_row_left" style="margin-left: 128px;">
-                    <span class="span_required">*</span>
-                    <span id="spanXL">小类</span>
-                </div>
-                <div id="divXLText" class="div_row_right" style="position: relative;">
-                </div>
+                <div id="divOUTLBTip"></div>
             </div>
             <div id="divFWLX" class="div_row" style="z-index: 997;">
                 <div class="div_row_left">
@@ -120,14 +113,22 @@
                 </div>
                 <div id="divFWLXText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divFWLXTip"></div>
             </div>
             <div id="divBXXZ" class="div_row" style="z-index: 997;">
                 <div class="div_row_left">
                     <span class="span_required">*</span>
                     <span id="spanBXXZ">办学性质</span>
                 </div>
-                <div id="divBXXZText" class="div_row_right" style="position: relative;">
+                <div class="div_row_right">
+                    <div class="div_radio" id="div_bxxz_gl">
+                        <img class="img_radio" id="img_bxxz_gl"/><label class="label_radio">公立</label>
+                    </div>
+                    <div class="div_radio" id="div_bxxz_sl">
+                        <img class="img_radio" id="img_bxxz_sl"/><label class="label_radio">私立</label>
+                    </div>
                 </div>
+                <div id="divBXXZTip"></div>
             </div>
             <div id="divRTTJ" class="div_row" style="margin-top: 22px;">
                 <div class="div_row_left">
@@ -157,7 +158,7 @@
                         <input class="input_spaninput" id="YYJSSJ_M" maxlength="9" column="YYJSSJ_M" type="text" value="00" style="width: 40px; " />
                     </span>
                 </div>
-                <div id="divJGTip" class="Warn" style="z-index: 998; position: relative;"></div>
+                <div id="divYYSJTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divFWQY" class="div_row" style="z-index: 996">
                 <div class="div_row_left">
@@ -223,16 +224,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -240,8 +241,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
