--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_PBPK/JYPX_PBPK.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX_PBPK/JYPX_PBPK.cshtml
@@ -139,7 +139,7 @@
                 </div>
                 <div id="divFDKMTip"></div>
             </div>
-            <div id="divQWSX" class="div_row" style="margin-top: 22px;">
+            <div id="divJGFW" class="div_row" style="margin-top: 22px;">
                 <div class="div_row_left">
                     <span class="span_required">*</span>
                     <span id="spanQWSX">价格范围</span>
@@ -154,7 +154,7 @@
                         <input class="input_spaninput spaninput_fontcolor" id="JGFW_Z" maxlength="9" column="JGFW_Z" type="text" style="width: 80px" />
                         <span class="spaninput_fontcolor">元/人/时</span>
                     </span>
-                    <div id="divQWSXTip"></div>
+                    <div id="divJGFWTip"></div>
                 </div>
             </div>
             <div id="divPBRS" class="div_row">
