--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJD_CJY/LYJD_CJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJD_CJY/LYJD_CJY.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXLYJD_CJY";
+    ViewBag.Title = "LYJD_CJY";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
