--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJD_ZBY/LYJD_ZBY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJD_ZBY/LYJD_ZBY.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "JYPXLYJD_ZBY";
+    ViewBag.Title = "LYJD_ZBY";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
