--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXYL_HW/XXYL_HW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXYL_HW/XXYL_HW.cshtml
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="divHWLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
+                <div id="divHWLBTip" class="Warn"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">特色描述</span>
